--- a/lookbook.html
+++ b/lookbook.html
@@ -15,8 +15,8 @@
     <div class="line__3"></div>
     <div class="header">
         <div class="navbar">
-            <div class="nav-links-wrapper"><a class="nav-item" href="/portfolio.html">portfolio</a><a class="nav-item"
-                    href="/lookbook.html"> lookbook</a><a class="nav-item" href="/portfolio.html"> work</a></div><svg
+            <div class="nav-links-wrapper"><a class="nav-item" href="https://saad96raza.github.io/gayatri__lingasuri/portfolio.html">portfolio</a><a class="nav-item"
+                    href="https://saad96raza.github.io/gayatri__lingasuri/lookbook.html"> lookbook</a><a class="nav-item" href="https://saad96raza.github.io/gayatri__lingasuri/portfolio.html"> work</a></div><svg
                 class="envelope-icon" width="34" height="34" viewbox="0 0 34 34" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -30,7 +30,7 @@
                     fill="black"></path>
             </svg>
             <div class="logo-wrapper">
-                <div class="logo-title"><a href="/portfolio.html">
+                <div class="logo-title"><a href="https://saad96raza.github.io/gayatri__lingasuri/portfolio.html">
                         <p class="logo__title__text">gayatri</p>
                         <p class="logo__title__text">lingasri</p>
                     </a></div>
